<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.dsl.classgen</groupId>
	<artifactId>PropsClassGenerator</artifactId>
	<version>0.2.4</version>
	<packaging>jar</packaging>

	<name>PropsClassGenerator</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.11.4</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.23.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.23.1</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>23</release>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
			<!-- Maven Dependency Plugin para copiar dependências -->
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.7.0</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>clean</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${user.dir}/src/main/resources/libs</outputDirectory>
							<includeScope>runtime</includeScope>
							<overWriteReleases>true</overWriteReleases>
							<overWriteSnapshots>true</overWriteSnapshots>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.1</version>
				<configuration>
					<outputDirectory>${user.dir}/src/main/resources/libs</outputDirectory>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<addBuildEnvironmentEntries>true</addBuildEnvironmentEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
